# plover_palantype_de

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  shell.nix
plover_palantype_DE/: system.py
plover_palantype_de/: system.py
plover_palantype_german/: machine.py  system.py
plover_palantype_german/dictionaries/: compound_builder.py  palan_de_sample.json  palan_de_user.json  palan_numbers.json  palan_spelling.json  palantype_de.json
