[metadata]
name = plover_palantype_german
version = 0.0.16
description = Possum Palantype support for Plover for German
long_description = file: README.rst
author = percidae
author_email = percidae@openmailbox.org
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/percidae/plover_palantype
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
packages =
	plover_palantype_german

[options.entry_points]
plover.system =
  Possum Palantype German = plover_palantype_german.system
plover.machine =
  Palantype = plover_palantype_german.machine:Palantype
