[metadata]
name = plover_palantype_DE
version = 0.1.2
description = A Palantype-inspired steno system for the German Language
long_description = file: README.md
long_description_content_type = text/markdown
author = rubenmoor
author_email = ruben.moor@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/rubenmoor/plover_palantype_german
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
                 plover>=4.0.0.dev1
packages =
	plover_palantype_de

[options.entry_points]
plover.system =
  Palantype DE = plover_palantype_de.system
